--- a/NEWS
+++ b/NEWS
@@ -1,2 +1,6 @@
+changes in version 1.3.6
+	*made small modifications to arguments for function mixnorm
+	*added vignette for mixnorm
+
 changes in version 1.3.1
 	*added mixnorm function for normalization of non-targeted metabolomics studies
