--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+changes in version 1.3.7
+	*modified package functions to handle situations where metabolites are entirely 
+	 missing for a particular level of a categorical predictor in the mixture model.
+
 changes in version 1.3.6
 	*made small modifications to arguments for function mixnorm
 	*added vignette for mixnorm
