Updating documentation and fixing conflicts
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/metabomxtr@129996 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+changes in version 1.11.1
+	*corrected bugs that occur when mixture models include at most 1 predictor
+	
 changes in version 1.9.1
 	*modified package so that normalization function does not output data 
 	when any model parameters are not possible to estimate. 
